--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speceditions",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-simple": "^0.1.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
